# GenFuzz

./: .gitignore
cov_metrics/: coverage.hpp  rtlflow.sh
cov_metrics/mux/: entry.cu
cov_metrics/mux/benchmarks/RocketTile_src/: Top.cu  Top.h  Top.mk  Top__1.cu  Top__10.cu  Top__11.cu  Top__12.cu  Top__13.cu  Top__14.cu  Top__15.cu  Top__16.cu  Top__1__Slow.cu  Top__2.cu  Top__2__Slow.cu  Top__3.cu  Top__3__Slow.cu  Top__4.cu  Top__4__Slow.cu  Top__5.cu  Top__5__Slow.cu  Top__6.cu  Top__6__Slow.cu  Top__7.cu  Top__7__Slow.cu  Top__8.cu  Top__9.cu  Top__Slow.cu  Top__Syms.cu  Top__Syms.h  Top__stats.txt  Top_classes.mk  check1.cu  check2.cu  check3.cu  check4.cu  check5.cu  check6.cu  rtlflow.cu  rtlflow.h
cov_metrics/mux/benchmarks/Sodor3Stage_src/: Top.cu  Top.h  Top.mk  Top__1.cu  Top__1__Slow.cu  Top__2.cu  Top__Slow.cu  Top__Syms.cu  Top__Syms.h  Top__stats.txt  Top_classes.mk  check1.cu  rtlflow.cu  rtlflow.h
cov_metrics/mux/benchmarks/Sodor5Stage_src/: Top.cu  Top.h  Top.mk  Top__1.cu  Top__1__Slow.cu  Top__2.cu  Top__Slow.cu  Top__Syms.cu  Top__Syms.h  Top__stats.txt  check1.cu  rtlflow.cu  rtlflow.h
cov_metrics/mux/benchmarks/TLI2C_src/: Top.cu  Top.h  Top.mk  Top__ALL.cu  Top__Slow.cu  Top__Syms.cu  Top__Syms.h  Top__stats.txt  Top_classes.mk  check1.cu  rtlflow.cu  rtlflow.h
cov_metrics/mux/benchmarks/TLSPI/: TLSPI.toml  TLSPI.v  TLSPI_VHarness.v  dut.hpp
cov_metrics/mux/benchmarks/TLSPI_src/: Top.cu  Top.h  Top.mk  Top__1.cu  Top__Slow.cu  Top__Syms.cu  Top__Syms.h  Top__stats.txt  Top_classes.mk  check1.cu  rtlflow.cu  rtlflow.h
cov_metrics/mux/src/: coverage.hpp  testbench.hpp
cov_metrics/reg/: entry.py  mux.py
cov_metrics/reg/ISASim/: host.py
cov_metrics/reg/RTLSim/: .rtlflow.sh.swp  coverage.hpp  host.py  testbench.cu
cov_metrics/reg/Template/: Makefile  rv64-p-u.S
cov_metrics/reg/benchmarks/RocketTile_src/: Top.cu  Top.h  Top.mk  Top__1.cu  Top__1__Slow.cu  Top__2.cu  Top__2__Slow.cu  Top__3.cu  Top__4.cu  Top__5.cu  Top__6.cu  Top__7.cu  Top__Slow.cu  Top__Syms.cu  Top__Syms.h  Top__stats.txt  Top_classes.mk  check1.cu  check2.cu  rtlflow.cu  rtlflow.h
cov_metrics/reg/benchmarks/SmallBoomTile_1_src/: Top.cu  Top.h  Top.mk  Top__1.cu  Top__10.cu  Top__11.cu  Top__12.cu  Top__13.cu  Top__14.cu  Top__15.cu  Top__16.cu  Top__17.cu  Top__1__Slow.cu  Top__2.cu  Top__2__Slow.cu  Top__3.cu  Top__3__Slow.cu  Top__4.cu  Top__4__Slow.cu  Top__5.cu  Top__5__Slow.cu  (+15 more)
cov_metrics/reg/src/: .mutator.py.swp  consider_all_sections_input_generator.py  input_generator.py  inst_generator.py  preprocessor.py  signature_checker.py  utils.py  word.py
genfuzz/: CMakeLists.txt  declarations.h
genfuzz/genfuzz/: genfuzz.hpp  handler.hpp
genfuzz/genfuzz/ga/: chromosome.hpp  ga.hpp  ga_manager.hpp  gene.hpp
genfuzz/main/: main.cpp
genfuzz/utility/: utility.hpp
(+12 files in other folders)
